Cleaned data exported

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
@@ -9,6 +16,13 @@
     "import pandas as pd\n",
     "import glob\n",
     "import os"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data cleaning class"
    ]
   },
   {
@@ -121,6 +135,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing and cleaning data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
@@ -187,6 +208,32 @@
     "result_total_sector_second_page = pd.concat(total_sector_second_page, ignore_index=True)\n",
     "result_sector_publico_privado_second_page = pd.concat(sector_publico_privado_second_page, ignore_index=True)\n",
     "result_posicion_empleo_second_page = pd.concat(posicion_empleo_second_page, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exporting data cleaned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_first_page.to_csv('Data/output/result_first_page.csv')\n",
+    "result_total_trabajadores_first_page.to_csv('Data/output/result_total_trabajadores_first_page.csv')\n",
+    "result_total_sector_first_page.to_csv('Data/output/result_total_sector_first_page.csv')\n",
+    "result_sector_publico_privado_first_page.to_csv('Data/output/result_sector_publico_privado_first_page.csv')\n",
+    "result_posicion_empleo_first_page.to_csv('Data/output/result_posicion_empleo_first_page.csv')\n",
+    "\n",
+    "result_second_page.to_csv('Data/output/result_second_page.csv')\n",
+    "result_total_trabajadores_second_page.to_csv('Data/output/result_total_trabajadores_second_page.csv')\n",
+    "result_total_sector_second_page.to_csv('Data/output/result_total_sector_second_page.csv')\n",
+    "result_sector_publico_privado_second_page.to_csv('Data/output/result_sector_publico_privado_second_page.csv')\n",
+    "result_posicion_empleo_second_page.to_csv('Data/output/result_posicion_empleo_second_page.csv')"
    ]
   },
   {
